			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.05j: *********************************

BUG: (3/23/07, DN) When libraries are specified in a command-line, project settings may be read from
    directory other than libraries.
FIX: In FileMenu use "TextUtils.getFilePath(fileURL)" instead of "User.getWorkingDirectory()".

BUG: (3/23/07, DN) Reading Spice, SiliconCompiler, PLA, PAD libraries changes all project settings.
FIX: In LibraryReader.readLibrary don't change project settings.

IMP: (3/23/07, DN) Project settings are reset before each AbstractTest and restored after it.

IMP: (3/22/07, DN) ProjSettings.exportSettings writes all Settings (even with default values).

IMP/MAN: (3/21/07, SMR) Default state of "icon technology" is now schematic,
     not universal (Bug #1295).

IMP: (3/21/07, SMR) Improved sea-of-gates router.

IMP: (3/21/07, SMR) Restored CRC checksum reporting to CIF export.

IMP: (3/21/07, SMR, from Bob Reese) Improved DEF import.

IMP/MAN: (3/17/07, DN) "importPrefs" command doesn't change project settings.

BUG: (3/17/07, DN) GDS layers settings are not initialized to factory values.
FIX: In Technology.newFoundry() method pass "gdsLayers" to Foundry constructor.

IMP: (3/16/07, GVG) Patching XMLRules so they can still be loaded even if project settings are inconsistent.
This is related to Bug#1294.

IMP: (3/16/07, DN) Added project setting "tsmc180.UseSecondPolysilicon".

IMP: (3/16/07, SMR) Added "tsmc180" technology project settings.

IMP: (3/16/07, DN) Actual changing of project settings is performed in Change Jobs.
    Project setting dialog submit jobs to change project settings.

BUG: (3/16/07, DN) Database JUnit regressions loads AWT classes.
FIX: Move ImageIcon stuff from EGraphics.Outline to ColorPatternPanel.

BUG: (3/16/07, DN) Database JUnit regressions crash in Setting initialization.